# pahtateoas

./: .gitignore  README.md  app.py  pyproject.toml  t.py
pathatoes/: dom.py  e.py
