[tool.poetry]
name = "pahtateoas"
version = "0.1.0"
description = "pronounced \"potatoes\""
authors = ["Rafal Stapinski <stapinskirafal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
bs4 = "^0.0.2"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
basedpyright = "^1.10.2"
black = "^24.4.0"
isort = "^5.13.2"
ruff = "^0.3.7"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_local_folder = ["test"]

[tool.black]
line-length = 120

[tool.mypy]
# strict = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
exclude = [".venv", "__pycache__"]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
ignore = ["E741"]
